# gauce-to-websquare

./: README.md  pyproject.toml
app/: main.py
app/core/: config.py
app/router/: dongwon.py
app/services/: convert_dongwon.py  dongwon.py  dongwon_oz.py  donwon_properties.py  event_converter.py  event_mapping.py  mapping.py
